# light-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/integrations/: claude-code.md
embedding/: Dockerfile  pyproject.toml
embedding/app/: main.py
light_rag/: __init__.py  __main__.py  config.py  importer.py  keywords.py  search.py
reranker/: Dockerfile  pyproject.toml
reranker/app/: main.py
scripts/: import_docs.py  search.sh
