[project]
name = "rag-knowledge-base"
version = "1.0.0"
description = "Claude Code 知识库系统 - 基于 RAG 的对话增强"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
