[project]
name = "rag-knowledge-base"
version = "1.0.0"
description = "Claude Code 知识库系统 - 基于 RAG 的对话增强"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "jieba>=0.42.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
