[project]
name = "embedding-service"
version = "1.0.0"
description = "Embedding Service - 文本向量化服务"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "jieba>=0.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
