[project]
name = "reranker-service"
version = "1.0.0"
description = "Reranker Service - 重排序服务（扩展点）"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
